# nix-fastapi-graphql

./: LICENSE  README.md  pyproject.toml
api/: main.py
